yaml/nodejs.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nodejs
  namespace: default
  labels:
    app: appV1
    name: nodejs
spec:
  containers:
  - name:  nodejs
    image: alfredobs97/minodejskubernetes:v1.1
    ports:
    - containerPort : 8080
    volumeMounts:
    - name: data
      mountPath: /data
  volumes:
  - name: data
    emptyDir: {}
