yaml/serviceNodejs.yaml
apiVersion: v1
kind: Service
metadata:
  name: expose-nodejs
spec:
  type: NodePort
  selector:
    app: appV1
  ports:
  - port: 8080
    targetPort: 8080
